--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <!-- background image credit: Tim Chow on Unsplash -https://unsplash.com/photos/9IcKPSQ9G5Q -->
         
     <h1 class=homepage-name> Vanan Phan </h1>
-    <h3> Technical Writer and Editor </h3>
+    <h3> Development Operations, Communications, and Technical Writer </h3>
         
     <div class="hometransbox">
     <nav class="homepagenav">
