--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
 
  <h2 class="aboutmeheader" >About Me</h2>
 
- <img src="Images/headshot.jpg" class="aboutmepic" alt="A headshot of Vanan."/>
+ <img src="Images/headshot1.png" class="aboutmepic" alt="A headshot of Vanan."/>
 
     <p> Hi, I’m Vanan! </p>
     
