--- a/sample.html
+++ b/sample.html
@@ -23,7 +23,7 @@
         
     <h1 class="writinghead">Writing Samples</h1>
 
-    <h2 class="sample"> Technical Writing </h2>
+   <h2> Technical Writing </h2>
   
     <h3 class="sample"><a href="PDF/vananphan_manual.pdf" target="_blank"> User Manual: Microsoft Word for Creative Writers (PDF) </a></h3>
     <p>For this project, I wrote and designed a 27-page task-oriented Microsoft Word manual that focuses on useful features for college level creatve writers.</p>
