--- a/resume.html
+++ b/resume.html
@@ -76,7 +76,7 @@
         </ul>
 
         <p><strong>Administrative Assistant</strong></p>
-        <p>Rose Kennedy Greenway Conservancy, Boston MA, September 2021-December 2022</p>
+        <p>JCBT Architect, Quincy MA, September 2021-December 2022</p>
          
         <ul>
             <li>Assist with client inquiries and document intake</li>
