--- a/sample.html
+++ b/sample.html
@@ -48,6 +48,11 @@
     <h3 class="sample"> <a href="PDF/vananphan_magazine_layout.pdf" target="_blank"> Magazine Layout (PDF)</a></h3>
     <p>I used Adobe InDesign to create a visual layout for a creative writing short story that I wrote.</p>
 
+    <h2 class="writingsubtitle"> Fundraising Campaigns </h2>
+        
+    <h3 class="sample"><a href="https://givebutter.com/GreenwayGT" target="_blank"> Annual Giving Tuesday Campaign </a></h3>
+    <p>I servered as the lead for The Greenway’s Giving Tuesday campaign, which featured videos from the Conservancy staff highlighting the incredible work they accomplish on an everyday basis, and raised $20k in funds for the park.</p>
+
     <h2 class="writingsubtitle"> Creative Writing </h2>
         
     <h3 class="sample"><a href="PDF/vananphan_creativewriting.pdf" target="_blank"> Creative Writing (PDF)</a></h3>
