--- a/sample.html
+++ b/sample.html
@@ -51,7 +51,7 @@
     <h2 class="writingsubtitle"> Fundraising Campaigns </h2>
         
     <h3 class="sample"><a href="https://givebutter.com/GreenwayGT" target="_blank"> Annual Giving Tuesday Campaign </a></h3>
-    <p>I servered as the lead for The Greenway’s Giving Tuesday campaign, which featured videos from the Conservancy staff highlighting the incredible work they accomplish on an everyday basis, and raised $20k in funds for the park.</p>
+    <p>I served as the lead for The Greenway’s Giving Tuesday campaign, which featured videos from the Conservancy staff highlighting the incredible work they accomplish on an everyday basis, and raised $20k in funds for the park.</p>
 
     <h2 class="writingsubtitle"> Creative Writing </h2>
         
