--- a/sample.html
+++ b/sample.html
@@ -26,7 +26,7 @@
     <h2 class="writingsubtitle"> Technical Writing </h2>
   
     <h3 class="sample"><a href="PDF/vananphan_manual.pdf" target="_blank"> User Manual: Microsoft Word for Creative Writers (PDF) </a></h3>
-    <p>For this project, I wrote and designed a 27-page task-oriented Microsoft Word manual that focuses on useful features for college level creatve writers.</p>
+    <p>For this project, I wrote and designed a 27-page task-oriented Microsoft Word manual that focuses on useful features for college level creative writers.</p>
         
     <h3 class="sample"><a href="PDF/vananphan_grant_proposal.pdf" target="_blank"> Mock Grant Proposal: Literary Journal for NAPAWF (PDF)</a></h3>
     <p> In this 29-page mock grant proposal, I request funding to support the creation of a literary journal for the National Asian Pacific American Women's Forum (NAPAWF).</p>
