--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <!-- background image credit: Andreea Ch on Pexels -https://www.pexels.com/photo/green-potted-plant-on-white-ceramic-vase-1166644/ -->
         
     <h1 class=homepage-name> Vanan Phan </h1>
-    <h3> Development Operations, Communications, and Technical Writer </h3>
+    <h3> Development Operations, Digital Marketing, and Technical Communications </h3>
         
     <div class="hometransbox">
     <nav class="homepagenav">
