--- a/sample.html
+++ b/sample.html
@@ -34,6 +34,13 @@
     <h3 class="sample"><a href="PDF/vananphan_pwtc_project.pdf" target="_blank"> Professional Writing and Technical Communication: Capstone Project (PDF)</a></h3>
     <p> For my Professional Writing and Technical Communication capstone project, I researched and drafted a 17-page essay that examines the relationship between hustle culture, mental health, and technology.</p>
 
+    <h2 class="writingsubtitle"> Social Media </h2>
+    <h3 class="sample"><a href="https://www.instagram.com/naaap_boston/?hl=en" target="_blank"> NAAAP Boston Instagram Page </a></h3>
+    <h3 class="sample"><a href="https://www.linkedin.com/in/naaapboston" target="_blank"> NAAAP Boston LinkedIn Page </a></h3>
+        <p>NAAAP Boston is the local chapter of National Association of Asian American Professionals (NAAAP), a 501(c)(3) nonprofit organization that is dedicated to cultivate, support and promote Asian American leaders through professional development opportunities, community services engagements and diverse industry connections.</p>
+        <p>NAAAP Boston was founded in 1986 and is the largest of the 27 chapters and associate chapters in North America. With more than 400 members, we are currently the fastest growing Asian American professionals organization in Boston.</p>
+        <p>NAAAP Boston’s vision is to be the premier leadership development organization for Asian American professionals.</p>
+
     <h2 class="writingsubtitle"> Graphic and Digital Media Design </h2>
         
     <h3 class="sample"><a href="PDF/vananphan_information_design.pdf" target="_blank"> Information Design Graphic (PDF)</a></h3>
