--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
     <h1 class="resumename"> Vanan Phan </h1>
         <p class="resumeemail"><a href="mailto:vananphan17@gmail.com ">vananphan17@gmail.com</a></p>
         
-        <h3 class="resumePDF"> <a href="PDF/Vanan_Phan_Resume.pdf" target="_blank"> Vanan Phan Resume (PDF)</a></h3>
+        <h3 class="resumePDF"> <a href="PDF/Vanan Phan Resume.pdf" target="_blank"> Vanan Phan Resume (PDF)</a></h3>
         
    <h2> Education </h2>
         <p>University of Massachusetts Amherst May 2021 | GPA: 3.8 | Dean's List Fall 2017-May 2021 </p>
