--- a/resume.html
+++ b/resume.html
@@ -89,6 +89,15 @@
         </ul>
 
         <h2>MARKETING EXPERIENCE AND OTHER AFFILIATIONS</h2>
+        <p> <strong>Ambassador</strong> </p>
+        <p> <a href="https://www.atask.org/" target="_blank"> Asian Task Force Against Domestic Violence,</a> Boston MA, February 2025-Present</p>
+
+        <ul>
+            <li>Educate the community about ATASK’s mission through online engagement.</li>
+            <li>Providing general operating support, including database maintenance, graphic design, and administrative support.</li>
+            <li>Oversee and organize impactful events and affinity group activities for ATASK clients and families.</li>
+        </ul>
+        
         <p> <strong>Director of Marketing</strong> </p>
         <p> <a href="https://www.naaapboston.org/" target="_blank"> National Association of Asian American Professionals, Boston Chapter,</a> Boston MA, January 2025-Present</p>
 
@@ -114,7 +123,7 @@
             <li>Research and collect upcoming events, jobs, and news from external sources that reflect Climate Designers’ mission to feature in monthly newsletter.</li>
             <li>Research, draft, and develop external and internal submission standards to ensure relevancy and quality of content featured across Climate Designers’ platforms.</li>
         </ul>
-        
+
         <h2>EDITORIAL EXPERIENCE</h2>
         <p><strong>Communications Assistant</strong></p>
         <p>Western Massachusetts Writing Project (UMass Amherst), Amherst MA, February 2021 - May 2021</p>
